# ml_random_forest

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  ANALISIS_GPBOOST_RETIRO.md  ANALISIS_XGBOOST_SOBREAJUSTE.md  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  GUIA_MLOPS_AWS_V2.md  README.md  REPORTE_COSTOS_GERENCIAL.md  Taskfile.yml  docker-compose.yml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml
api/: .dockerignore  .env.example  Dockerfile  requirements.txt
api/app/: __init__.py  dependencies.py  main.py
api/app/core/: __init__.py  catalogs.py  config.py  excel_helpers.py  exception_handlers.py  exceptions.py  logger.py  middleware.py  varieties.py
api/app/crud/: __init__.py  forecast.py  historical_observation.py
api/app/models/: __init__.py  database.py  forecast.py  historical_observation.py
api/app/routers/: __init__.py  forecasts.py  health.py  history.py  varieties.py
api/app/schemas/: __init__.py  forecast.py  health.py  historical_observation.py  variety.py
api/app/services/: __init__.py  drift_baseline.py  drift_service.py  excel_service.py  feature_pipeline.py  forecast_service.py  health_service.py  mlflow_service.py  uncertainty.py
data/: decision_table.csv  decision_table.html  variety_anchor_assignment.csv  variety_anchor_mapping.yaml  variety_predictive_routing.csv  variety_predictive_routing.yaml  variety_training_mapping.csv
docker/: nginx-reports.conf
docker/postgres/initdb/: 01-create-forecasts.sql
docker/reports/: Dockerfile  entrypoint.sh  nginx.conf
docs/: PLAN_REFACTOR_2026-06-12.md  REFACTOR_ARQUITECTURA_2026-06-23.md
infra/: bootstrap.sh
infra/envs/prod/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
infra/lambdas/: dispatcher.py  notifier.py  scheduler.py
infra/migrations/: migrate_ecr_foreach.sh
infra/modules/api/: main.tf  outputs.tf  variables.tf
infra/modules/batch/: iam.tf  main.tf  outputs.tf  variables.tf
infra/modules/cicd/: main.tf  variables.tf
infra/modules/lambdas/: dispatcher.tf  notifier.tf  outputs.tf  variables.tf
infra/modules/mlflow/: alb.tf  ecs.tf  iam.tf  outputs.tf  rds.tf  variables.tf
infra/modules/monitoring/: main.tf  variables.tf
infra/modules/network/: main.tf  outputs.tf  variables.tf
infra/modules/reports/: main.tf  outputs.tf  variables.tf
infra/modules/scheduler/: main.tf  outputs.tf  variables.tf
infra/modules/storage/: main.tf  outputs.tf
infra/modules/ui/: main.tf  outputs.tf  variables.tf
notebooks/: README.md  SUSTENTO_ESTADISTICO_RUTEO.md  experiment_cluster_varieties_new.ipynb  experiment_variety_anchor_routing.ipynb  variety_clustering.py  variety_routing.py
scripts/: ensure-env.sh  ensure-s3-bucket.sh  mlflow_reconcile.py  prepare_data.py  prod.env  promote_model.py  s3_sync.py
scripts/experiments/: backfill_mlflow_reports.py  gpboost_pilot.py  lgb_l1_vs_tweedie.py  lgb_vs_gpb_control.py  mlflow_cleanup.py  residual_structure_test.py
src/: __init__.py  config.py  variety_config.py
src/diagnostics/: __init__.py  _dashboard_assets.py  categorical.py  dashboard_index.py  distributions.py  eda.py  html_renderer.py  multivariate.py  plots.py  residuals.py  run_metadata.py  statistical_tests.py  temporal.py
src/orchestration/: _run_mlflow_logging.py  _run_outputs.py  cleanup.py  cli.py  quality_gate.py  runners.py  single_run.py  variety_runner.py
src/pipeline/: build_pipeline.py
src/step_01_load/: data_loader.py  validation.py
src/step_02_clean/: _helpers.py  imputers.py  missing_flags.py  outlier_score.py  outliers.py
src/step_03_features/: _helpers.py  exante.py  feature_engineering.py  lag_features.py
src/step_04_train/: cv_strategy.py  early_stopping.py  model_gpb.py  model_lgb.py  model_xgb.py  oof_ensemble.py  registry.py  sample_weights.py  search_spaces.py  target_transform.py  temporal_cv.py  tuning.py  warm_start.py
src/step_05_evaluate/: champion.py  conformal_bands.py  diagnostics.py  metrics.py  statistical_tests.py
src/step_05_evaluate/explainability/: __init__.py  actions.py  bias.py  context.py  glossary.py  kit.py  kpis.py  verdict.py
src/step_05_evaluate/html/: __init__.py  helpers.py  sections.py  styles.py  technical.py  winner_dashboard.py
src/step_06_track/: business_validation.py  mlflow_registry.py
src/step_06_track/business_export/: __init__.py  builders.py  export.py  formatting.py
src/utils/: cloudwatch_metrics.py  html_assets.py  logger.py  sklearn_helpers.py
tasks/: batch.yml  ecr.yml  infra.yml  ops.yml
tasks/lib/: batch_wait.sh  mlflow_uri.sh  nuke.sh  wake.sh
tests/: conftest.py  test_api_conformal.py  test_conformal_bands.py  test_gpb_backend.py  test_lag_transformer.py  test_register_guard.py  test_select_champion.py  test_variety_config.py
ui/: .dockerignore  .env.example  Dockerfile  requirements.txt
ui/.streamlit/: config.toml
ui/app/: __init__.py  app.py  dependencies.py
ui/app/client/: __init__.py  api_client.py  endpoints.py  mappers.py
ui/app/components/: __init__.py  css.py  sidebar.py  theme.py
ui/app/components/charts/: __init__.py  _common.py  bar_table.py  gauge.py  heatmap.py  histogram.py  indicator.py  tracking.py
ui/app/components/forecast_tabs/: __init__.py  tab_list.py
ui/app/components/forms/: __init__.py  search_filters.py
ui/app/components/layout/: __init__.py  drift_panel.py  empty_state.py  header.py  insight_card.py  kpi_card.py  section_title.py
ui/app/core/: __init__.py  config.py  constants.py  exceptions.py  logger.py
ui/app/presenters/: __init__.py  forecast.py  home.py  models.py  tracking.py
ui/app/schemas/: __init__.py  models.py
ui/app/services/: __init__.py  batch_validation.py  forecast_service.py  health_service.py  payload_builder.py  tracking_service.py  variety_service.py
ui/app/views/: forecast.py  home.py  model_report.py  models.py  system.py  tracking.py
ui/assets/css/: style.css
