[tool.ruff]
# Alineado con .editorconfig: Python 3.12, 4 spaces, 100 col.
line-length = 100
target-version = "py312"
extend-exclude = [
    ".terraform",
    ".ruff_cache",
    "mlruns",
    "artifacts",
    "logs",
    "data",
    "reports",
    "__pycache__",
]

[tool.ruff.lint]
# E/W = pycodestyle, F = pyflakes, I = isort, B = flake8-bugbear,
# UP = pyupgrade, SIM = flake8-simplify
select = ["E", "F", "W", "I", "B", "UP", "SIM"]
# E501 (line-too-long) lo maneja el formatter, no el linter
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# B008: `Query(...)`/`File(...)` en defaults es el idioma estándar de FastAPI
# para declarar parámetros — no es el antipatrón que bugbear persigue.
"api/**" = ["B008"]
# E402: main.py configura warnings y logging ANTES de importar el resto de
# módulos (intencional: los imports de app.* emiten logs).
"api/app/main.py" = ["E402"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
skip-magic-trailing-comma = false

# ---------------------------------------------------------------------------
# NOTA sobre dependencias: este repo NO es un paquete pip-instalable, es un
# monorepo de 3 servicios que corren en Docker + PYTHONPATH (no `pip install .`).
# Por eso NO hay tabla [project]/[build-system]: las deps de RUNTIME viven
# pinneadas en requirements.txt (trainer/ui) y api/requirements.txt — esos son
# los locks que consumen los Dockerfiles. Las de DEV en requirements-dev.txt.
# pyproject.toml es el hub de config de HERRAMIENTAS (ruff, mypy, pytest).
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
# Suite P0 (tests/). Correr DENTRO del contenedor (mismas versiones que prod):
#   docker compose run --rm --entrypoint sh trainer -c \
#     "pip install -q pytest && PYTHONPATH=/app pytest -q"
minversion = "8.0"
testpaths = ["tests"]
addopts = "-q --strict-markers"
pythonpath = ["."]
filterwarnings = [
    # Silenciar ruido de libs de terceros (pyparsing/matplotlib) sin ocultar
    # los warnings de NUESTRO código.
    "ignore::DeprecationWarning:matplotlib.*",
    "ignore::DeprecationWarning:pyparsing.*",
]

[tool.mypy]
# Typing GRADUAL y opt-in: arrancamos laxo para no bloquear, endurecemos por
# módulo con overrides a medida que se anotan. NO es gate de CI todavía.
python_version = "3.12"
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
ignore_missing_imports = true        # libs ML sin stubs (lightgbm, xgboost…)
exclude = [
    "^(artifacts|logs|reports|data|mlruns|\\.terraform)/",
    "^notebooks/",
    "^scripts/experiments/",
]

# A medida que un módulo quede limpio, subir su rigor aquí. Ejemplo:
# [[tool.mypy.overrides]]
# module = ["src.step_03_features.lag_features"]
# disallow_untyped_defs = true
